# hackrf_sync

./: CMakeLists.txt  README.md  Stand.scad  hack_rf_rx_samples.cpp  play.cpp  play_hackrf.py
GUI/: soapy_fft.py  sweep.py
python/: xcorr.py
